tests/ui/custom_index_key.stderr
error[E0277]: the trait bound `Custom: o3::collections::index::Sealed` is not satisfied
 --> tests/ui/custom_index_key.rs:6:19
  |
6 | impl IndexKey for Custom {
  |                   ^^^^^^ unsatisfied trait bound
  |
help: the trait `o3::collections::index::Sealed` is not implemented for `Custom`
 --> tests/ui/custom_index_key.rs:4:1
  |
4 | struct Custom(usize);
  | ^^^^^^^^^^^^^
help: the following other types implement trait `o3::collections::index::Sealed`
 --> src/collections/mod.rs
  |
  | impl index::Sealed for usize {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `usize`
  |
 ::: src/collections/slab/key.rs
  |
  | impl<Tag, const MAX: u32> index::Sealed for SlabKey<Tag, MAX> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SlabKey<Tag, MAX>`
note: required by a bound in `o3::collections::IndexKey`
 --> src/collections/mod.rs
  |
  | pub trait IndexKey: index::Sealed + Copy + Eq {
  |                     ^^^^^^^^^^^^^ required by this bound in `IndexKey`
  = note: `IndexKey` is a "sealed trait", because to implement it you also need to implement `o3::collections::index::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            o3::collections::SlabKey<Tag, MAX>
            usize
